# Interactive_SegMesh3D

./: .gitignore  LICENSE  README.md  app.py  file_structure.md  index.html  main.js  package.json  popup.js  pyproject.toml  setup.sh  styles.css
backend/: get_camscene.py  holopart_parts.py  multiview_glb.py  seg_single.py
